--- a/00-jest/package.json
+++ b/00-jest/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack serve",
     "build": "rimraf ./dist && cross-env NODE_ENV=production webpack",
-    "test": "cross-env APP_ENV=jest jest",
-    "test:watch": "cross-env APP_ENV=jest jest --watch"
+    "test": "cross-env APP_ENV=test jest",
+    "test:watch": "cross-env APP_ENV=jest test --watch"
   },
   "dependencies": {
     "axios": "^0.24.0",
