--- a/01-e2e/package.json
+++ b/01-e2e/package.json
@@ -4,30 +4,32 @@
   "description": "website e2e test",
   "author": "milkmidi milkmidi@gmail.com",
   "engines": {
-    "node": ">= 12.x",
-    "npm": ">=6.x"
+    "node": ">= 16.x",
+    "npm": ">=7.x"
   },
   "scripts": {
     "test": "playwright test",
-    "test:headed": "playwright test --headed"
+    "test:headed": "playwright test --headed",
+    "show-report": "npx playwright show-report",
+    "screenshot": "cross-env-shell APP_ENV=production ts-node ./src/screenshot/index.ts"
   },
   "dependencies": {
-    "@playwright/test": "^1.38.1",
+    "@playwright/test": "^1.39.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
-    "playwright": "^1.38.1",
+    "playwright": "^1.39.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
-    "@types/node": "^20.8.0",
-    "@typescript-eslint/eslint-plugin": "^6.7.3",
-    "@typescript-eslint/parser": "^6.7.3",
-    "eslint": "^8.50.0",
+    "@types/node": "^20.8.7",
+    "@typescript-eslint/eslint-plugin": "^6.8.0",
+    "@typescript-eslint/parser": "^6.8.0",
+    "eslint": "^8.52.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "prettier": "^3.0.3"
   }
 }
